# ai-project-template

./: CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  dependency-review.yml  docker.yml  release.yml  secret-scan.yml
notebooks/: 01_example_workflow.ipynb
src/observability/: feedback.py
src/rag/: chunking.py
tests/unit/: test_chunking.py
