[project]
name = "ai-project-template"
version = "0.3.0"
description = "Unified Python template for ML, LLM, RAG, and agent projects"
requires-python = ">=3.13"
license = "MIT"
readme = "README.md"

# Base: lean core. Everything heavy is an optional extra.
dependencies = [
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.0",
    "tqdm>=4.67",
]

[project.optional-dependencies]
# Classical ML (sklearn, pandas, matplotlib)
ml = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "matplotlib>=3.10.9",
    "seaborn>=0.13",
    "openpyxl>=3.1",
    "joblib>=1.4",
]

# Deep learning
dl = [
    "torch>=2.5",
]

# LLM clients
llm = [
    "anthropic>=0.97.0",
    "openai>=2.33.0",
    "tiktoken>=0.8",
]

# RAG: embeddings, vector stores, chunking
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=3.3",
    "langchain-text-splitters>=0.3",
]

# Agents: frameworks + tool infra
agents = [
    "langgraph>=1.1.10",
    "pydantic-ai>=1.89.1",
]

# Evaluation + observability
eval = [
    "arize-phoenix>=14.17.0",
    "langsmith>=0.8.0",
]

# Web API
api = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
]

# Jupyter
jupyter = [
    "ipykernel",
    "jupyter",
]

# Dev tools
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.12",
    "pre-commit>=4.6.0",
    "mypy>=1.20.2",
]

# Convenience: install everything
all = [
    "ai-project-template[ml,dl,llm,rag,agents,eval,api,jupyter,dev]",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
